tests/snapshots/gc__gc_right_name.snap
---
source: tests/gc.rs
expression: r.stdout
---
gc: <HOME>/.local/state/ricepilot
nothing outside that directory is removed, and nothing in it unless its name is typed back.

the attic — <HOME>/.local/state/ricepilot/attic
  candidate  <HOME>/.local/state/ricepilot/attic/<TS>
             <N> directories, 3 links; <N> bytes
             holds only what <HOME>/.local/state/ricepilot/journal/done-<TS>.toml says was displaced into it:
               3 links, whose targets that journal records

1 candidate (<N> bytes), 0 kept.

remove <HOME>/.local/state/ricepilot/attic/<TS>? it holds <N> directories, 3 links; <N> bytes. this cannot be undone.
type <TS> to remove it, or anything else to keep it: <TS>
removed <HOME>/.local/state/ricepilot/attic/<TS>: <N> directories, 3 links; <N> bytes.

removed 1 of 1 candidate.
