tests/snapshots/gc__gc_verify_removed.snap
---
source: tests/gc.rs
expression: r.stdout
---
gc: <HOME>/.local/state/ricepilot
nothing outside that directory is removed, and nothing in it unless its name is typed back.

verify-config copies — <HOME>/.local/state/ricepilot/verify
  candidate  <HOME>/.local/state/ricepilot/verify/<TS>
             <N> directories, 1 file, 1 socket, fifo or device; <N> bytes
             a scratch copy the sandboxed verify-config parsed (D55); nothing refers to it

1 candidate (<N> bytes), 0 kept.

remove <HOME>/.local/state/ricepilot/verify/<TS>? it holds <N> directories, 1 file, 1 socket, fifo or device; <N> bytes. this cannot be undone.
type <TS> to remove it, or anything else to keep it: <TS>
removed <HOME>/.local/state/ricepilot/verify/<TS>: <N> directories, 1 file, 1 socket, fifo or device; <N> bytes.

removed 1 of 1 candidate.
